--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
+    "material-ui": "^0.20.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-key-handler": "^1.0.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "typeface-roboto": "^0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
