--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "material-ui": "^0.20.1",
+    "popper.js": "^1.14.3",
     "react": "^16.3.2",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-key-handler": "^1.0.1",
     "react-router": "^4.2.0",
