--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
-    "material-ui": "^0.20.1",
     "react": "^16.3.2",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-key-handler": "^1.0.1",
     "react-scripts": "1.1.4",
